--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ignacio/Kendo",
+    "name": "ignacio/kendo",
     "type": "yii2-extension",
     "description": "Kendo",
     "keywords": ["yii2", "Kendo"],
